--- a/style.css
+++ b/style.css
@@ -3,160 +3,203 @@ body {
     margin: 0;
 }
 
-.first-part {
-    display: flex;
-    background-color: black;
-    margin: 60px 160px;
-    border-radius: 30px;
-    color: white;
-    height: 80vh;
+@media screen and (max-device-width: 768px) {
+    .first-part {
+        display: flex;
+        height: 60vh;
+        background-color: black;
+        color: white;
+        margin: 6vw 7vw;
+        border-radius: 4vw;
+    }
 }
 
-.intro img {
-    width: 480px;
-    position: relative;
-    top: 20px;
+@media screen and (max-device-width: 768px) {
+    .intro {
+        width: 50%;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .intro img {
+        width: 90%;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .intro h1 {
+        font-size: 6vw;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .intro p {
+        font-size: 1.7vw;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .link {
+        text-decoration: none;
+        background-color: blue;
+        color: white;
+        font-size: 1.5vw;
+        padding: 1.7vw 3.6vw;
+        border-radius: 1.3vw;
+
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    #article {
+        padding-left: 2vw;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .second-part {
+        display: block;
+        height: 90vh;
+        margin-top: 10vw;
+        height: 170vh;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .side-part {
+        height: 9vw;
+        text-align: center;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .side-part a {
+        text-decoration: none;
+        border: 1px solid rgba(128, 128, 128, 0.568);
+        border-radius: 1vw;
+        padding: 2vw 3vw;
+        color: black;
+        font-weight: 600;
+        margin: 1vw;
+
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    #third-link {
+        background-color: red;
+        color: white;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .middle-part {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 10px;
+
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .news {
+        width: 45vw;
+        height: 50vw;
+        background-color: rgba(252, 255, 255, 0.808);
+        border-radius: 15px;
+        border: 1px solid rgba(107, 107, 107, 0.466);
+        margin: 1.3vw;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .news img {
+        width: 45vw;
+        height: 22vw;
+        object-fit: cover;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .news button {
+        background-color: white;
+        border: 1px solid black;
+        border-radius: 5px;
+        padding: 5px 20px;
+        font-size: 16px;
+        font-weight: 500;
+        margin-left: 15px;
+        margin-top: 10px;
+        font-weight: 550;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .news h3 {
+        margin-left: 15px;
+        font-size: 2.5vw;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    span {
+        margin-right: 15px;
+        margin-left: 15px;
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .view button {
+        background-color: red;
+        border: none;
+        border-radius: 7px;
+        padding: 10px 25px;
+        color: white;
+        font-size: 2vw;
+        margin-left: 310px;
+        margin-top: 30px;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    footer {
+        color: white;
+        background-color: black;
+        text-align: center;
+        height: 30vh;
+    }
 
 }
 
-.intro {
-    width: 50%;
+@media screen and (max-device-width: 768px) {
+    h2 {
+        font-size: 5vw;
+        padding-top: 2vw;
+    }
 }
 
-#article {
-    padding-left: 160px;
-    padding-bottom: 160px;
-    padding-top: 0px;
-
+@media screen and (max-device-width: 768px) {
+    ul {
+        list-style: none;
+        display: flex;
+        width: 90%;
+    }
 }
 
-.intro h1 {
-    font-size: 75px;
-    font-weight: bold;
-}
-
-.intro p {
-    font-size: 18px;
-    width: 90%;
-    margin-bottom: 43px;
-    margin-top: -50px;
-}
-
-.link {
-    text-decoration: none;
-    background-color: red;
-    color: white;
-    font-size: 23px;
-    padding: 15px 30px;
-    border-radius: 10px;
+@media screen and (max-device-width: 768px) {
+    li {
+        margin: 20px;
+        color: silver;
+    }
 
 }
 
-.second-part {
-    display: flex;
-    height: 90vh;
-    margin-top: 100px;
-    justify-content: center;
-}
-
-.side-part {
-    background-color: black;
-    border-radius: 15px;
-    height: 33vh;
-    width: 340px;
-    margin-right: 20px;
-    align-items: center;
-}
-
-aside a {
-    display: flex;
-    text-decoration: none;
-    color: black;
-    font-size: 20px;
-    margin: 32px 20px;
-    padding: 15px 20px;
-    border-radius: 10px;
-    background-color: white;
-    justify-content: center;
-    font-weight: 600;
-
-}
-
-#third-link {
-    background-color: red;
-    color: white;
-}
-
-.middle-part {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    height: 400px;
-}
-
-.news {
-    width: 380px;
-    height: 360px;
-    background-color: rgba(252, 255, 255, 0.808);
-    border-radius: 15px;
-    border: 1px solid rgba(107, 107, 107, 0.466);
-    margin: 10px;
-}
-
-.news img {
-    width: 380px;
-    height: 170px;
-    object-fit: cover;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-}
-
-.news button {
-    background-color: white;
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 5px 20px;
-    font-size: 16px;
-    font-weight: 500;
-    margin-left: 15px;
-    margin-top: 10px;
-    font-weight: 550;
-}
-
-.news h3 {
-    margin-left: 15px;
-    font-size: 20px;
-}
-
-span {
-    margin-right: 15px;
-    margin-left: 15px;
-    font-size: 16px;
-}
-
-footer {
-    color: white;
-    background-color: black;
-    text-align: center;
-    height: 40vh;
-    padding-top: 240px;
-}
-
-h2 {
-    font-size: 40px;
-}
-
-ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-}
-
-li {
-    margin: 20px;
-    color: silver;
-}
-
-hr {
-    margin-left: 200px;
-    margin-right: 200px;
+@media screen and (max-device-width: 768px) {
+    hr {
+        margin-left: 200px;
+        margin-right: 200px;
+    }
 }
