--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ body {
     }
 }
 
-@media screen and (max-device-width: 768px) {
+@media screen and (max-device-width: 1023px) and (min-device-width: 768px) {
     .news img {
         width: 45vw;
         height: 22vw;
@@ -122,7 +122,7 @@ body {
     }
 }
 
-@media screen and (max-device-width: 768px) {
+@media screen and (max-device-width: 1023px) and (min-device-width: 768px) {
     .news button {
         background-color: white;
         border: 1px solid black;
@@ -136,14 +136,14 @@ body {
     }
 }
 
-@media screen and (max-device-width: 768px) {
+@media screen and (max-device-width: 1023px) and (min-device-width: 768px) {
     .news h3 {
         margin-left: 15px;
         font-size: 2.5vw;
     }
 }
 
-@media screen and (max-device-width: 768px) {
+@media screen and (max-device-width: 1023px) and (min-device-width: 768px) {
     span {
         margin-right: 15px;
         margin-left: 15px;
@@ -151,7 +151,7 @@ body {
     }
 }
 
-@media screen and (max-device-width: 768px) {
+@media screen and (max-device-width: 1023px) and (min-device-width: 768px) {
     .view button {
         background-color: red;
         border: none;
@@ -164,7 +164,7 @@ body {
     }
 }
 
-@media screen and (max-device-width: 768px) {
+@media screen and (max-device-width: 1023px) and (min-device-width: 768px) {
     footer {
         color: white;
         background-color: black;
@@ -174,14 +174,14 @@ body {
 
 }
 
-@media screen and (max-device-width: 768px) {
+@media screen and (max-device-width: 1023px) and (min-device-width: 768px) {
     h2 {
         font-size: 5vw;
         padding-top: 2vw;
     }
 }
 
-@media screen and (max-device-width: 768px) {
+@media screen and (max-device-width: 1023px) and (min-device-width: 768px) {
     ul {
         list-style: none;
         display: flex;
@@ -189,7 +189,7 @@ body {
     }
 }
 
-@media screen and (max-device-width: 768px) {
+@media screen and (max-device-width: 1023px) and (min-device-width: 768px) {
     li {
         margin: 20px;
         color: silver;
@@ -197,7 +197,7 @@ body {
 
 }
 
-@media screen and (max-device-width: 768px) {
+@media screen and (max-device-width: 1023px) and (min-device-width: 768px) {
     hr {
         margin-left: 200px;
         margin-right: 200px;
