--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0 auto;
-    max-width: 1915px;
+    max-width: 1920px;
 }
 
 .first-part {
@@ -9,7 +9,7 @@ body {
     margin: 50px 150px;
     background-color: black;
     color: white;
-    height: 80vh;
+    height: 35vw;
     border-radius: 20px;
 }
 
@@ -48,7 +48,7 @@ body {
 
 .second-part {
     display: flex;
-    height: 100vh;
+    height: 45vw;
     margin-top: 100px;
     justify-content: center;
 }
@@ -56,7 +56,7 @@ body {
 .side-part {
     background-color: black;
     border-radius: 15px;
-    height: 38vh;
+    height: 16vw;
     width: 18%;
     margin-right: 20px;
     align-items: center;
@@ -84,13 +84,13 @@ aside a {
 .middle-part {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    height: 95vh;
+    height: 5vw;
 
 }
 
 .news {
-    width: 380px;
-    height: 360px;
+    width: 20vw;
+    height: 19vw;
     background-color: rgba(252, 255, 255, 0.808);
     border-radius: 15px;
     border: 1px solid rgba(107, 107, 107, 0.466);
@@ -110,11 +110,11 @@ aside a {
     border: 1px solid black;
     border-radius: 5px;
     padding: 5px 20px;
-    font-size: 1em;
+    font-size: 1vw;
     font-weight: 500;
     margin-left: 15px;
     margin-top: 10px;
-    font-weight: 550;
+    font-weight: 500;
 }
 
 .news h3 {
@@ -125,19 +125,19 @@ aside a {
 span {
     margin-right: 15px;
     margin-left: 15px;
-    font-size: 1;
+    font-size: .9vw;
 }
 
 footer {
     color: white;
     background-color: black;
     text-align: center;
-    height: 40vh;
+    height: 15vw;
     padding-top: 240px;
 }
 
 h2 {
-    font-size: 40px;
+    font-size: 2vw;
 }
 
 ul {
@@ -154,6 +154,10 @@ li {
 hr {
     margin-left: 200px;
     margin-right: 200px;
+}
+
+.view {
+    visibility: hidden;
 }
 
 @media (min-width: 200px) and (max-width: 576px) {
@@ -205,37 +209,33 @@ hr {
 
     .second-part {
         display: block;
-        height: 440vw;
+        height: 470vw;
         margin-top: 0px;
         justify-content: center;
     }
 
 
     .side-part {
+        display: block;
         background-color: white;
         border-radius: 0px;
-        height: 7vw;
-        width: 100%;
-        margin-right: 0px;
-        margin-top: 60px;
-        margin-bottom: 40px;
-        text-align: center;
-
+        height: 28vw;
+        width: auto;
+        margin: 0 60px;
     }
 
     aside a {
-        display: inline;
+        width: auto;
         text-decoration: none;
         color: black;
         font-size: 3vw;
         margin: 5px;
-        padding: 10px 20px;
+        padding: 5px 10px;
         border-radius: 5px;
-        border: 1px solid black;
+        border: 1px solid gray;
         background-color: white;
         /* justify-content: center; */
         font-weight: 600;
-
     }
 
     #third-link {
@@ -252,7 +252,7 @@ hr {
 
     .news {
         width: 80vw;
-        height: 65vw;
+        height: 68vw;
         background-color: rgba(252, 255, 255, 0.808);
         border-radius: 15px;
         border: 1px solid rgba(107, 107, 107, 0.466);
@@ -294,7 +294,7 @@ hr {
         color: white;
         background-color: black;
         text-align: center;
-        height: 80vw;
+        height: 95vw;
         padding-top: 10px;
     }
 
@@ -309,7 +309,7 @@ hr {
     }
 
     li {
-        margin: 0px;
+        margin: 10px;
         color: silver;
     }
 
@@ -320,5 +320,180 @@ hr {
 
     .view {
         visibility: hidden;
+    }
+}
+
+@media (min-width: 577px) and (max-width: 820px) {
+    .first-part {
+        display: flex;
+        margin: 50px 50px;
+        background-color: black;
+        color: white;
+        height: 45vw;
+        border-radius: 20px;
+    }
+
+    .intro {
+        width: 50%;
+    }
+
+    #article {
+        padding: 20px 50px 40px;
+    }
+
+    .intro img {
+        width: 90%;
+        height: 100%;
+        object-fit: contain;
+
+    }
+
+    .intro h1 {
+        font-size: 4vw;
+    }
+
+    .intro p {
+        font-size: 1.2vw;
+        width: 80%;
+    }
+
+    .link {
+        text-decoration: none;
+        background-color: red;
+        color: white;
+        font-size: 1.1vw;
+        padding: 10px 20px;
+        border-radius: 7px;
+    }
+
+    .second-part {
+        display: block;
+        height: 150vw;
+        margin-top: 0px;
+        justify-content: center;
+    }
+
+    .side-part {
+        background-color: white;
+        border-radius: 5px;
+        height: 5vw;
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        margin-bottom: 50px;
+
+    }
+
+    aside a {
+        display: inline;
+        text-decoration: none;
+        color: black;
+        font-size: 2vw;
+        margin: 10px;
+        padding: 10px 20px;
+        border-radius: 10px;
+        background-color: white;
+        font-weight: 600;
+        border: 1px solid gray;
+    }
+
+    #third-link {
+        background-color: red;
+        color: white;
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+
+    .middle-part {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        height: 130vw;
+        width: auto;
+        margin: 0 40px;
+    }
+
+    .news {
+        width: 42vw;
+        height: 44vw;
+        background-color: rgba(252, 255, 255, 0.808);
+        border-radius: 15px;
+        border: 1px solid rgba(107, 107, 107, 0.466);
+        margin: 5px;
+    }
+
+    .news img {
+        width: 100%;
+        height: 48%;
+        object-fit: cover;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+    }
+
+    .news button {
+        background-color: white;
+        border: 1px solid black;
+        border-radius: 5px;
+        padding: 5px 20px;
+        font-size: 2vw;
+        font-weight: 500;
+        margin-left: 15px;
+        margin-top: 10px;
+        font-weight: 500;
+    }
+
+    .news h3 {
+        margin-left: 15px;
+        font-size: 2vw;
+    }
+
+    span {
+        margin-right: 15px;
+        margin-left: 15px;
+        font-size: 1.7vw;
+    }
+
+    footer {
+        color: white;
+        background-color: black;
+        text-align: center;
+        height: 25vw;
+        padding-top: 200px;
+    }
+
+    h2 {
+        font-size: 3vw;
+    }
+
+    ul {
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        padding: 0px;
+    }
+
+    li {
+        margin: 20px;
+        color: silver;
+    }
+
+    hr {
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+
+    .view {
+        display: flex;
+        justify-content: center;
+        margin: 40px 10px;
+    }
+
+    .view button {
+        text-decoration: none;
+        background-color: red;
+        border: none;
+        padding: 15px 25px;
+        font-size: 2vw;
+        color: white;
+        border-radius: 5px;
     }
 }
