--- a/style.css
+++ b/style.css
@@ -497,3 +497,158 @@ hr {
         border-radius: 5px;
     }
 }
+
+@media (min-width: 1024px) and (max-width: 1504px) {
+    .first-part {
+        display: flex;
+        margin: 50px 80px;
+        background-color: black;
+        color: white;
+        height: 40vw;
+        border-radius: 20px;
+    }
+
+    .intro {
+        width: 50%;
+    }
+
+    #article {
+        padding: 40px 50px 40px;
+    }
+
+    .intro img {
+        width: 90%;
+        height: 100%;
+        object-fit: contain;
+
+    }
+
+    .intro h1 {
+        font-size: 4vw;
+    }
+
+    .intro p {
+        font-size: 1.2vw;
+        width: 80%;
+    }
+
+    .link {
+        text-decoration: none;
+        background-color: red;
+        color: white;
+        font-size: 1.1vw;
+        padding: 15px 25px;
+        border-radius: 10px;
+    }
+
+    .second-part {
+        display: flex;
+        height: 80vw;
+        margin-top: 100px;
+        justify-content: center;
+    }
+
+    .side-part {
+        background-color: black;
+        border-radius: 15px;
+        height: 24vw;
+        width: 18%;
+        margin-right: 20px;
+        align-items: center;
+    }
+
+    aside a {
+        display: flex;
+        text-decoration: none;
+        color: black;
+        font-size: 1.3vw;
+        margin: 18px 20px;
+        padding: 15px 20px;
+        border-radius: 10px;
+        background-color: white;
+        justify-content: center;
+        font-weight: 600;
+
+    }
+
+    #third-link {
+        background-color: red;
+        color: white;
+    }
+
+    .middle-part {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        height: 20vw;
+
+    }
+
+    .news {
+        width: 20vw;
+        height: 33vw;
+        background-color: rgba(252, 255, 255, 0.808);
+        border-radius: 15px;
+        border: 1px solid rgba(107, 107, 107, 0.466);
+        margin: 10px;
+    }
+
+    .news img {
+        width: 100%;
+        height: 48%;
+        object-fit: cover;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+    }
+
+    .news button {
+        background-color: white;
+        border: 1px solid black;
+        border-radius: 5px;
+        padding: 5px 20px;
+        font-size: 1.3vw;
+        font-weight: 500;
+        margin-left: 15px;
+        margin-top: 10px;
+        font-weight: 500;
+    }
+
+    .news h3 {
+        margin-left: 15px;
+        font-size: 1.4vw;
+    }
+
+    span {
+        margin-right: 15px;
+        margin-left: 15px;
+        font-size: 1.1vw;
+    }
+
+    footer {
+        color: white;
+        background-color: black;
+        text-align: center;
+        height: 15vw;
+        padding-top: 240px;
+    }
+
+    h2 {
+        font-size: 2vw;
+    }
+
+    ul {
+        list-style: none;
+        display: flex;
+        justify-content: center;
+    }
+
+    li {
+        margin: 20px;
+        color: silver;
+    }
+
+    hr {
+        margin-left: 200px;
+        margin-right: 200px;
+    }
+
+}
